[project]
name = "blocking-analyzer"
version = "0.1.0"
description = "Analyzes Python code to detect blocking operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
blocking-analyzer = "blocking_analyzer:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
